<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SigninFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_register_head"
            android:layout_marginTop="30dp"
            android:text="@string/enter_details"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_register_fullname"
            android:layout_below="@id/textview_register_head"
            android:text="@string/tv_username"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="50dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_register_fullname"
            android:hint="@string/hint_username"
            android:textColor="@color/black"
            android:layout_below="@id/textview_register_fullname"
            android:textSize="16sp"
            android:padding="6dp"
            android:inputType="textPersonName"
            android:background="@drawable/border"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_register_email"
            android:layout_below="@id/textview_register_fullname"
            android:text="@string/tv_email"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="50dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_register_email"
            android:hint="@string/hint_email"
            android:textColor="@color/black"
            android:layout_below="@id/textview_register_email"
            android:textSize="16sp"
            android:padding="6dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/border"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_register_password"
            android:layout_below="@id/textview_register_email"
            android:text="@string/tv_password"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="50dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_register_password"
            android:hint="@string/hint_password"
            android:textColor="@color/black"
            android:layout_below="@id/textview_register_password"
            android:textSize="16sp"
            android:padding="6dp"
            android:inputType="textPassword"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/ic_visibility_off"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b_register"
            android:text="@string/signin_btn"
            android:layout_below="@id/et_register_password"
            android:layout_marginTop="50dp"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/b_register"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_loginlink"
                android:layout_marginStart="5dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>