<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_head"
            android:layout_marginTop="30dp"
            android:text="@string/enter_credentials"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_email"
            android:layout_below="@id/tv_login_head"
            android:layout_marginTop="50dp"
            android:text="@string/tv_email"
            android:textSize="16sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_login_email"
            android:layout_below="@id/tv_login_email"
            android:hint="@string/hint_email"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="16sp"
            android:background="@drawable/border" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_password"
            android:layout_below="@id/et_login_email"
            android:layout_marginTop="50dp"
            android:text="@string/tv_password"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_login_password"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/ic_visibility_off"
            android:drawablePadding="8dp" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b_login"
            android:text="@string/login_btn"
            android:layout_below="@id/et_login_password"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/b_login"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donthave"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_registerlink"
                android:layout_marginStart="5dp"
                android:text="@string/signup"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>