<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.category.CategoryFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_category"
            android:layout_marginTop="30dp"
            android:textColor="@color/title"
            android:text="@string/category"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_addcat"
            android:layout_below="@id/tv_category"
            android:textColor="@color/title"
            android:layout_marginTop="50dp"
            android:text="@string/tv_catname"
            android:textSize="16sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_addcat"
            android:textColor="@color/black"
            android:layout_below="@id/tv_addcat"
            android:hint="@string/hint_catname"
            android:inputType="text"
            android:padding="6dp"
            android:textSize="16sp"
            android:background="@drawable/border" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_addImage"
            android:layout_below="@id/et_addcat"
            android:textColor="@color/title"
            android:layout_marginTop="25dp"
            android:text="@string/tv_catimage"
            android:textSize="16sp" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/im_image"
            android:layout_below="@id/tv_addImage" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/b_image"
            android:text="@string/btn_image"
            android:layout_marginTop="25dp"
            android:layout_below="@id/tv_addImage" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b_addcat"
            android:text="@string/btn_add"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_below="@id/b_image" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_listcat"
            android:layout_below="@id/b_addcat"
            android:textColor="@color/title"
            android:layout_marginTop="50dp"
            android:text="@string/list_category"
            android:textSize="16sp"
            android:textStyle="bold" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_category"
            android:layout_below="@id/tv_listcat"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:clipToPadding="false" />
    </RelativeLayout>

</ScrollView>